--- a/parckman/index.html
+++ b/parckman/index.html
@@ -312,10 +312,28 @@
 		{ x, y } // Заезд на парковочное место
 	  ];
 	};
+	
+	// Маршрут "левая верхняя малая половина периметра" (по часовой стрелке)
+	const leftUpperSmallClockwiseRoute = (spot) => {
+	  const { x, y } = scaleCoords(spot.x, spot.y);
+	  return [
+		{ x, y }, // Парковочное место
+		{ x, y: y - 20 }, // Выезд с парковочного места
+		{ x, y: y - 50 }, // Выезд на основную дорогу
+		{ x: 700 - npcOffset, y: y - 50 }, // Движение вправо (верхняя горизонтальная)
+		{ x: 700 - npcOffset, y: 300 }, // Движение вниз (центральная вертикальная)
+		{ x: 300, y: 300 }, // Движение влево (внутренний верхний проезд)
+		{ x: 300, y: y - 50 }, // Движение вверх (левая вертикальная)
+		{ x, y: y - 50 }, // Подъезд к парковочному месту
+		{ x, y: y - 20 }, // Ближний подъезд
+		{ x, y: y - 10 }, // Точка разворота
+		{ x, y } // Заезд на парковочное место
+	  ];
+	};	
 
 	// Случайный выбор маршрута для каждого NPC
 	const npcRoutes = allParkingSpots.map((spot) => {
-	  const routeType = Phaser.Math.Between(0, 9);
+	  const routeType = Phaser.Math.Between(0, 10);
 	  switch (routeType) {
 		case 0:
 		  return clockwiseRoute(spot); // По часовой стрелке
@@ -336,7 +354,9 @@
 		case 8: 
 		  return rightUpperQuarterCounterClockwiseRoute(spot); // Правая верхняя четверть периметра (против часовой стрелки)
 		case 9: 
-		  return rightHalfCounterClockwiseRoute(spot);	// Правая половина периметра (против часовой стрелки)	  
+		  return rightHalfCounterClockwiseRoute(spot);	// Правая половина периметра (против часовой стрелки)
+		case 10: 
+		  return leftUpperSmallClockwiseRoute(spot);  // Левая верхняя малая половина периметра (по часовой стрелке)
 
 		default:
 		  return clockwiseRoute(spot); // return clockwiseRoute(spot);
@@ -422,47 +442,12 @@
 		npc.setCollideWorldBounds(true);
 
 		// Случайный выбор маршрута (теперь 0-6)
-		const routeType = Phaser.Math.Between(0, 9);
+		const routeType = Phaser.Math.Between(0, 10);
 		switch (routeType) {
-		  case 0:
-			npc.route = clockwiseRoute(spot);
+
+		  case 10:
+			npc.route = leftUpperSmallClockwiseRoute(spot);
 			npc.isCounterClockwise = false;
-			break;
-		  case 1:
-			npc.route = counterClockwiseRoute(spot);
-			npc.isCounterClockwise = true;
-			break;
-		  case 2:
-			npc.route = upperHalfClockwiseRoute(spot);
-			npc.isCounterClockwise = false;
-			break;
-		  case 3:
-			npc.route = upperHalfCounterClockwiseRoute(spot);
-			npc.isCounterClockwise = true;
-			break;
-		  case 4:
-			npc.route = leftHalfClockwiseRoute(spot);
-			npc.isCounterClockwise = false;
-			break;
-		  case 5:
-			npc.route = leftHalfCounterClockwiseRoute(spot);
-			npc.isCounterClockwise = true;
-			break;
-		  case 6:
-			npc.route = rightHalfClockwiseRoute(spot);
-			npc.isCounterClockwise = false;
-			break;
-		  case 7:
-			npc.route = rightUpperQuarterClockwiseRoute(spot);
-			npc.isCounterClockwise = false;
-			break;
-		  case 8:
-			npc.route = rightUpperQuarterCounterClockwiseRoute(spot);
-			npc.isCounterClockwise = true;
-			break;
-		  case 9:
-			npc.route = rightHalfCounterClockwiseRoute(spot);
-			npc.isCounterClockwise = true;
 			break;			
 			
 		  default:
