--- a/parckman/index.html
+++ b/parckman/index.html
@@ -59,15 +59,51 @@
     const npcWidth = 40;
     const npcOffset = npcWidth / 2;
 
-    // Парковочные места
+    // Парковочные места (полный набор)
     const upperLeftParkingSpots = [
       { x: 361, y: 380 }, { x: 454, y: 380 }, { x: 546, y: 380 },
-      { x: 641, y: 380 }, { x: 729, y: 380 }, { x: 823, y: 380 }
+      { x: 641, y: 380 }, { x: 729, y: 380 }, { x: 823, y: 380 },
+      { x: 361, y: 495 }, { x: 454, y: 495 }, { x: 546, y: 495 },
+      { x: 641, y: 495 }, { x: 729, y: 495 }, { x: 823, y: 495 },
+      { x: 361, y: 674 }, { x: 454, y: 674 }, { x: 546, y: 674 },
+      { x: 641, y: 674 }, { x: 729, y: 674 }, { x: 823, y: 674 },
+      { x: 361, y: 785 }, { x: 454, y: 785 }, { x: 546, y: 785 },
+      { x: 641, y: 785 }, { x: 729, y: 785 }, { x: 823, y: 785 }
     ];
+
     const upperRightParkingSpots = [
       { x: 1094, y: 380 }, { x: 1189, y: 380 }, { x: 1279, y: 380 },
-      { x: 1371, y: 380 }, { x: 1462, y: 380 }, { x: 1555, y: 380 }
+      { x: 1371, y: 380 }, { x: 1462, y: 380 }, { x: 1555, y: 380 },
+      { x: 1094, y: 495 }, { x: 1189, y: 495 }, { x: 1279, y: 495 },
+      { x: 1371, y: 495 }, { x: 1462, y: 495 }, { x: 1555, y: 495 },
+      { x: 1094, y: 674 }, { x: 1189, y: 674 }, { x: 1279, y: 674 },
+      { x: 1371, y: 674 }, { x: 1462, y: 674 }, { x: 1555, y: 674 },
+      { x: 1094, y: 785 }, { x: 1189, y: 785 }, { x: 1279, y: 785 },
+      { x: 1371, y: 785 }, { x: 1462, y: 785 }, { x: 1555, y: 785 }
     ];
+
+    const lowerLeftParkingSpots = [
+      { x: 361, y: 1535 }, { x: 454, y: 1535 }, { x: 546, y: 1535 },
+      { x: 641, y: 1535 }, { x: 729, y: 1535 }, { x: 823, y: 1535 },
+      { x: 361, y: 1420 }, { x: 454, y: 1420 }, { x: 546, y: 1420 },
+      { x: 641, y: 1420 }, { x: 729, y: 1420 }, { x: 823, y: 1420 },
+      { x: 361, y: 1241 }, { x: 454, y: 1241 }, { x: 546, y: 1241 },
+      { x: 641, y: 1241 }, { x: 729, y: 1241 }, { x: 823, y: 1241 },
+      { x: 361, y: 1130 }, { x: 454, y: 1130 }, { x: 546, y: 1130 },
+      { x: 641, y: 1130 }, { x: 729, y: 1130 }, { x: 823, y: 1130 }
+    ];
+
+    const lowerRightParkingSpots = [
+      { x: 1094, y: 1535 }, { x: 1189, y: 1535 }, { x: 1279, y: 1535 },
+      { x: 1371, y: 1535 }, { x: 1462, y: 1535 }, { x: 1555, y: 1535 },
+      { x: 1094, y: 1420 }, { x: 1189, y: 1420 }, { x: 1279, y: 1420 },
+      { x: 1371, y: 1420 }, { x: 1462, y: 1420 }, { x: 1555, y: 1420 },
+      { x: 1094, y: 1241 }, { x: 1189, y: 1241 }, { x: 1279, y: 1241 },
+      { x: 1371, y: 1241 }, { x: 1462, y: 1241 }, { x: 1555, y: 1241 },
+      { x: 1094, y: 1130 }, { x: 1189, y: 1130 }, { x: 1279, y: 1130 },
+      { x: 1371, y: 1130 }, { x: 1462, y: 1130 }, { x: 1555, y: 1130 }
+    ];
+	
     const allParkingSpots = [...upperLeftParkingSpots, ...upperRightParkingSpots];
 
     // Все 13 маршрутов
