--- a/parckman/index.html
+++ b/parckman/index.html
@@ -392,8 +392,8 @@
       if (isPreRotation) {
         // Небольшой разворот "передом" в противоположную сторону
         npc.rotation = npc.isCounterClockwise 
-          ? -Phaser.Math.DegToRad(7) 
-          : Phaser.Math.DegToRad(7);
+          ? -Phaser.Math.DegToRad(0) 
+          : Phaser.Math.DegToRad(0;
       } else if (isFinalRotating) {
         // Окончательный разворот на 0 градусов
         npc.rotation = 0;
