--- a/parckman/index.html
+++ b/parckman/index.html
@@ -393,7 +393,7 @@
         // Небольшой разворот "передом" в противоположную сторону
         npc.rotation = npc.isCounterClockwise 
           ? -Phaser.Math.DegToRad(0) 
-          : Phaser.Math.DegToRad(0;
+          : Phaser.Math.DegToRad(0);
       } else if (isFinalRotating) {
         // Окончательный разворот на 0 градусов
         npc.rotation = 0;
