--- a/parckman/index.html
+++ b/parckman/index.html
@@ -295,7 +295,8 @@
 
 		============================================
 	  */	
-	
+	  this.load.image('lamp_top', 'assets/lamp_top.png');  // Верхний прожектор
+	  this.load.image('lamp_bottom', 'assets/lamp_bottom.png');  // Нижний прожектор	
       this.load.image('background', 'assets/parking_map.png');
       this.load.image('entrance', 'assets/entrance.png');
       this.load.image('pavilion', 'assets/pavilion.png');
@@ -475,18 +476,24 @@
       const oilOffsetX = 15, oilOffsetY = 23;
 
       // Координаты элементов
+	  const lampTopCoords = scaleCoords(850+90, 123+0);
+	  const lampBottomCoords = scaleCoords(854+90, 1650+0);
       const grass1Coords = scaleCoords(661 + grassOffsetX, 89 + grassOffsetY);
       const tree1Coords = scaleCoords(1635 + treeOffsetX, 127 + treeOffsetY);
       const bush1Coords = scaleCoords(1716 + bushOffsetX, 298 + bushOffsetY);
       const oilCoords = scaleCoords(25 + oilOffsetX, 938 + oilOffsetY);
 
       // Создание элементов
+	  const lampTop = scene.add.image(lampTopCoords.x, lampTopCoords.y, 'lamp_top').setScale(0.5);
+	  const lampBottom = scene.add.image(lampBottomCoords.x, lampBottomCoords.y, 'lamp_bottom').setScale(0.5);
       const grass1 = scene.add.image(grass1Coords.x, grass1Coords.y, 'grass1').setScale(0.5);
       const tree1 = scene.add.image(tree1Coords.x, tree1Coords.y, 'tree1').setScale(0.5);
       const bush1 = scene.add.image(bush1Coords.x, bush1Coords.y, 'bush1').setScale(0.5);
       const oil = scene.add.image(oilCoords.x, oilCoords.y, 'oil').setScale(0.5);
 
       // Установка глубины отображения
+	  lampTop.setDepth(11);
+	  lampBottom.setDepth(11);
       grass1.setDepth(10);
       tree1.setDepth(10);
       bush1.setDepth(10);
