--- a/parckman/index.html
+++ b/parckman/index.html
@@ -86,7 +86,7 @@
 
     // Парковочные места
     const upperLeftParkingSpots = [
-		{ x: 361, y: 380 }, //{ x: 454, y: 380 }, { x: 546, y: 380 }, { x: 641, y: 380 }, { x: 729, y: 380 }, { x: 823, y: 380 },	// 1-й левый верхний ряд 6 мест
+		{ x: 361, y: 380 }, { x: 454, y: 380 }, //{ x: 546, y: 380 }, { x: 641, y: 380 }, { x: 729, y: 380 }, { x: 823, y: 380 },	// 1-й левый верхний ряд 6 мест
 	//	{ x: 361, y: 674 }, { x: 454, y: 674 }, { x: 546, y: 674 }, { x: 641, y: 674 }, { x: 729, y: 674 }, { x: 823, y: 674 }, // 2-й левый верхний ряд 6 мест
 	//	{ x: 361, y: 1130 }, { x: 454, y: 1130 }, { x: 546, y: 1130 }, { x: 641, y: 1130 }, { x: 729, y: 1130 }, { x: 823, y: 1130 }, // 3-й левый верхний ряд 6 мест
 	//	{ x: 361, y: 1420 }, { x: 454, y: 1420 }, { x: 546, y: 1420 }, { x: 641, y: 1420 }, { x: 729, y: 1420 }, { x: 823, y: 1420 } // 4-й левый верхний ряд 6 мест  
@@ -108,7 +108,7 @@
         const { x, y } = scaleCoords(spot.x, spot.y);
         return [
           { x, y }, { x, y: y - 20 }, { x, y: y - 35 },
-          { x: 680 - npcOffset, y: y - 35 }, { x: 680 - npcOffset, y: 680 - npcOffset },
+          { x: 675 - npcOffset, y: y - 35 }, { x: 675 - npcOffset, y: 680 - npcOffset },
           { x: 120 + npcOffset, y: 680 - npcOffset }, { x: 120 + npcOffset, y: y - 35 },
           { x, y: y - 35 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
         ];
@@ -119,7 +119,7 @@
         return [
           { x, y }, { x, y: y - 20 }, { x, y: y - 55 },
           { x: 90 + npcOffset, y: y - 55 }, { x: 90 + npcOffset, y: 700 - npcOffset },
-          { x: 700 - npcOffset, y: 700 - npcOffset }, { x: 700 - npcOffset, y: y - 55 },
+          { x: 705 - npcOffset, y: 700 - npcOffset }, { x: 705 - npcOffset, y: y - 55 },
           { x, y: y - 55 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
         ];
       },
