--- a/parckman/index.html
+++ b/parckman/index.html
@@ -103,23 +103,23 @@
 
     // Все 13 маршрутов
     const allPossibleRoutes = [
-      // 1. Полный круг по часовой стрелке
-      function clockwiseRoute(spot) {
+      // 3. Верхняя половина по часовой стрелке
+      function upperHalfClockwiseRoute(spot) {
         const { x, y } = scaleCoords(spot.x, spot.y);
         return [
           { x, y }, { x, y: y - 20 }, { x, y: y - 35 },
-          { x: 677 - npcOffset, y: y - 35 }, { x: 677 - npcOffset, y: 680 - npcOffset },
-          { x: 115 + npcOffset, y: 680 - npcOffset }, { x: 115 + npcOffset, y: y - 35 },
+          { x: 677 - npcOffset, y: y - 35 }, { x: 677 - npcOffset, y: 380 - npcOffset },
+          { x: 115 + npcOffset, y: 380 }, { x: 115 + npcOffset, y: y - 35 },
           { x, y: y - 35 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
         ];
       },
-      // 2. Полный круг против часовой стрелки
-      function counterClockwiseRoute(spot) {
+      // 4. Верхняя половина против часовой стрелки
+      function upperHalfCounterClockwiseRoute(spot) {
         const { x, y } = scaleCoords(spot.x, spot.y);
         return [
           { x, y }, { x, y: y - 20 }, { x, y: y - 55 },
-          { x: 85 + npcOffset, y: y - 55 }, { x: 85 + npcOffset, y: 700 - npcOffset },
-          { x: 703 - npcOffset, y: 700 - npcOffset }, { x: 703 - npcOffset, y: y - 55 },
+          { x: 85 + npcOffset, y: y - 55 }, { x: 85 + npcOffset, y: 400 },
+          { x: 700 - npcOffset, y: 400 }, { x: 700 - npcOffset, y: y - 50 },
           { x, y: y - 55 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
         ];
       },
