--- a/parckman/index.html
+++ b/parckman/index.html
@@ -108,7 +108,7 @@
         const { x, y } = scaleCoords(spot.x, spot.y);
         return [
           { x, y }, { x, y: y - 20 }, { x, y: y - 35 },
-          { x: 677 - npcOffset, y: y - 35 }, { x: 677 - npcOffset, y: 380 - npcOffset },
+          { x: 677 - npcOffset, y: y - 35 }, { x: 677 - npcOffset, y: 380 },
           { x: 115 + npcOffset, y: 380 }, { x: 115 + npcOffset, y: y - 35 },
           { x, y: y - 35 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
         ];
