--- a/parckman/index.html
+++ b/parckman/index.html
@@ -118,8 +118,8 @@
         const { x, y } = scaleCoords(spot.x, spot.y);
         return [
           { x, y }, { x, y: y - 55 }, { x, y: y - 55 },
-          { x: 85 + npcOffset, y: y - 50 }, { x: 85 + npcOffset, y: 250 - npcOffset },
-          { x: 399, y: 250 - npcOffset }, { x: 399, y: y - 55 },
+          { x: 85 + npcOffset, y: y - 50 }, { x: 85 + npcOffset, y: 250 },
+          { x: 399, y: 250 }, { x: 399, y: y - 55 },
           { x, y: y - 55 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
         ];
       }
