--- a/parckman/index.html
+++ b/parckman/index.html
@@ -63,7 +63,7 @@
     // Параметры объезда
     const AVOID_SIDE_STEP = 25; // Боковое смещение при объезде
     const BACK_OFF_DISTANCE = 20; // Откат назад при ожидании
-    const DETECTION_RADIUS = 15;
+    const DETECTION_RADIUS = 40; // 15
 
     // Парковочные места
     const upperLeftParkingSpots = [
