--- a/parckman/index.html
+++ b/parckman/index.html
@@ -420,8 +420,8 @@
         { x: 259 + 1479/2, y: 1622 - 40 + 141/2, width: 1479, height: 221 },
         { x: 257 + 1482/2, y: 872 - 40 + 252/2, width: 1482, height: 332 },
         { x: 887 + 203/2, y: 236 + 1528/2, width: 203, height: 1528 },
-        { x: 259 + 1477/2, y: 579 + 94/2, width: 1477, height: 94 },
-        { x: 259 + 1477/2, y: 1326 + 94/2, width: 1477, height: 94 }
+        { x: 259 + 1477/2, y: 579 - 42 + 94/2, width: 1477, height: 94 + 84 },
+        { x: 259 + 1477/2, y: 1326 - 42 + 94/2, width: 1477, height: 94 + 84 }
       ];
 
       roads.forEach(road => {
@@ -629,8 +629,8 @@
         { x: 259 + 1479/2, y: 1622 - 40 + 141/2, width: 1479, height: 221 },
         { x: 257 + 1482/2, y: 872 - 40 + 252/2, width: 1482, height: 332 },
         { x: 887 + 203/2, y: 236 + 1528/2, width: 203, height: 1528 },
-        { x: 259 + 1477/2, y: 579 + 94/2, width: 1477, height: 94 },
-        { x: 259 + 1477/2, y: 1326 + 94/2, width: 1477, height: 94 }
+        { x: 259 + 1477/2, y: 579 - 42 + 94/2, width: 1477, height: 94 + 84 },
+        { x: 259 + 1477/2, y: 1326 - 42 + 94/2, width: 1477, height: 94 + 84 }
       ];
 
       roads.forEach(road => {
